[package]
name    = "small-stm32-rust-car"
version = "0.1.0"
authors = ["cao"]
edition = "2021"          # 2024 版尚未稳定，Ferocene 也只支持到 2021

###############################################################################
# 二进制目标（保持原有示例不变）
###############################################################################
[[bin]]
name = "bitfield"
path = "src/bin/bitfield.rs"
test = false
[[bin]]
name = "format"
path = "src/bin/format.rs"
test = false
[[bin]]
name = "hello"
path = "src/bin/hello.rs"
test = false
[[bin]]
name = "levels"
path = "src/bin/levels.rs"
test = false
[[bin]]
name = "overflow"
path = "src/bin/overflow.rs"
test = false
[[bin]]
name = "panic"
path = "src/bin/panic.rs"
test = false
[[bin]]
name = "mecanum_car"
path = "src/bin/mecanum_car.rs"
test = false

[lib]
harness = false

[[test]]
name = "integration"
harness = false

###############################################################################
# 运行时 & HAL
###############################################################################
[dependencies]
cortex-m       = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt    = "0.7.3"
rtic           = { version = "2.2.0", features = ["thumbv7-backend"] }
systick-monotonic = "1.0.1"

# STM32F1 HAL（含 PAC）
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }

###############################################################################
# 外设驱动 / 通用库
###############################################################################
# PCA9685 16 路 PWM (I2C)
pwm-pca9685 = { version = "1.0.0", default-features = false }
# USB CDC ACM
usb-device  = { version = "0.3.2", default-features = false }
usbd-serial = { version = "0.2.2", default-features = false }
# 无堆静态容器
heapless    = "0.8"
# 数学 / 辅助
libm        = "0.2"
micromath   = "2.1"
embedded-hal = "1.0"
nb           = "1.0"
cortex-m-semihosting = "0.5.0"

###############################################################################
# 日志 & Panic
###############################################################################
defmt        = "1.0"
defmt-rtt    = "1.0.0"
panic-probe  = { version = "1.0", features = ["print-defmt"] }

###############################################################################
# 可选 feature：日志开关
###############################################################################
[features]
default = []

###############################################################################
# dev-dependencies
###############################################################################
[dev-dependencies]
defmt-test = "0.3"

###############################################################################
# 构建配置（与原保持一致）
###############################################################################
[profile.dev]
codegen-units     = 1
debug             = 2
debug-assertions  = true
incremental       = false
opt-level         = 'z'
overflow-checks   = true

[profile.test]
codegen-units     = 1
debug             = 2
debug-assertions  = true
incremental       = false
opt-level         = 3
overflow-checks   = true

[profile.release]
codegen-units     = 1
debug             = 2
debug-assertions  = false
incremental       = false
lto               = 'fat'
opt-level         = 3
overflow-checks   = false

[profile.bench]
codegen-units     = 1
debug             = 2
debug-assertions  = false
incremental       = false
lto               = 'fat'
opt-level         = 3
overflow-checks   = false
